樣式修改所以先儲存

--- a/src/app/@Dialog/@Shift/accept-shift/accept-shift.component.html
+++ b/src/app/@Dialog/@Shift/accept-shift/accept-shift.component.html
@@ -22,5 +22,9 @@
 
   </div>
 </div>
-
-<daypilot-scheduler [config]="config" [events]="events"></daypilot-scheduler>
+<div class="daypilot-scheduler-wrapper">
+  <daypilot-scheduler
+    [config]="config"
+    [events]="events">
+  </daypilot-scheduler>
+</div>
