--- a/src/app/calendar/testneed1.component.scss
+++ b/src/app/calendar/testneed1.component.scss
@@ -28,7 +28,7 @@
   position: relative;
   width: 250px;
   border-radius: 1em;
-  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.2), 0 15px 12px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 24px rgba(0, 0, 0, 0.12);
   overflow: hidden;
 }
 
