--- a/src/app/clock/clock.component.scss
+++ b/src/app/clock/clock.component.scss
@@ -7,7 +7,7 @@
   border-radius: 50%;
   margin: 50px auto;
   position: relative;
-  box-shadow: 5px 5px 10px grey;
+  // box-shadow: 5px 5px 10px grey;
 }
 
 .point {
